# NDK_Sample

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  change-voice.cpp  com_example_ndk_ChangeVoiceActivity.h  com_example_ndk_MainActivity.h  dynamic-lib.cpp  native-lib.cpp
app/src/main/java/com/example/ndk/: ChangeVoiceActivity.java  DynamicActivity.java  ExceptionActivity.java  KotlinActivity.kt  MainActivity.java  MainActivity2.java  StaticCacheActivity.java
app/src/main/java/com/example/ndk/bean/: Dog.java  Person.java  Student.java
app/src/main/res/layout/: activity_dynamic.xml  activity_exception.xml  activity_kotlin.xml  activity_main.xml  activity_staticcache.xml  activity_voice.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
